<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.richemont.digital.pulsar</groupId>
    <artifactId>pulsar-sap-em-connector</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <inceptionYear>2020</inceptionYear>

    <organization>
        <name>Richemont SA</name>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/chrsoo/pulsar-sap-em-connector/blob/main/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <version.lombok>1.18.14</version.lombok>
        <version.xbem.client>2.0.1</version.xbem.client>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <!-- java 11 configuration -->
                        <!-- <release>1.8</release> -->
                        <!-- lombok configuration -->
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${version.lombok}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.nifi</groupId>
                <artifactId>nifi-nar-maven-plugin</artifactId>
                <version>1.2.0</version>
                <executions>
                  <execution>
                    <id>default-nar</id>
                    <phase>package</phase>
                    <goals>
                      <goal>nar</goal>
                    </goals>
                  </execution>
                </executions>
            </plugin>
            <!-- TODO Remove additional source path for JDK8 and lombok if not needed -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/lombok</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- TODO use delombok to generate classes if we end up not using lombok, then remove -->
            <!-- cf. https://projectlombok.org/setup/maven -->
            <!--
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>${version.lombok}</version>
                <configuration>
                    <encoding>UTF8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.pulsar</groupId>
            <artifactId>pulsar-io-core</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.rabbitmq</groupId>
            <artifactId>amqp-client</artifactId>
            <version>5.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.google-collections</groupId>
            <artifactId>google-collect</artifactId>
            <version>snapshot-20080530</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.10.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.10.0</version>
        </dependency>

        <!-- SAP Dependencies -->
        <dependency>
            <groupId>com.sap.cloud.servicesdk.xbem</groupId>
            <artifactId>emjapi-connector-sap-cp</artifactId>
            <version>${version.xbem.client}</version>
        </dependency>

        <dependency>
            <groupId>com.sap.cloud.servicesdk.xbem</groupId>
            <artifactId>emjapi-core</artifactId>
            <version>${version.xbem.client}</version>
        </dependency>

        <dependency>
            <groupId>com.sap.cloud.servicesdk.xbem</groupId>
            <artifactId>emjapi-extension-sap-cp-jms</artifactId>
            <version>${version.xbem.client}</version>
        </dependency>

    </dependencies>

</project>
